# Facedetection

./: .gitIgnore  CMakeLists.txt  README.md  main.cpp  main_fixed.cpp
